--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+mkdocs-materialx-10.0.5 (2026-01-02)
+
+- **New**: Refactor the TOC components for mobile, now you can experience TOC perfectly on mobile!
+
 mkdocs-materialx-10.0.4 (2026-01-02)
 
 - **New**: Refactor the TOC components for mobile, now you can experience TOC perfectly on mobile!
@@ -10,8 +14,7 @@ mkdocs-materialx-10.0.4 (2026-01-02)
 - **Fixed**: iconsearch_index.json write issue
 - **Fixed**: Language selector escapes viewport when too wide on mobile
 - **Fixed**: Replace the gap attribute to increase compatibility
-- **Fixed**: Adjust the style for kbd styles
-- **Fixed**: Adjust the border-radius of all styles
+- **Fixed**: Adjust the style of kbd shortcuts
 - **Fixed**: Adjust UI shadow effect
 - **Fixed**: Merge the upstream 9.7.1 update
 - **Fixed**: Update Doc Site, see [MaterialX](https://jaywhj.github.io/mkdocs-materialx/)
