--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 mkdocs-materialx-10.0.5 (2026-01-05)
 
 - New: **Refactor the TOC components for mobile**, now you can experience TOC perfectly on mobile!
-- Fixed: Show/hide top navigation container wisely
+- Fixed: Show/hide bottom navigation container wisely
 - Fixed: TOC not hiding when clicked
 - Fixed: Gaussian Blur not working in Safari
 - Fixed: Adjust animation delay
